Sat Mar 29 16:02:44 2003  Joern Thyssen  <jth@gnubg.org>

        Enhance dice manipulation :-)

        * gnubg.c, show.c, set.c: new commands "set cheat enable" and
        "set cheat player xx roll".
        * gnubg.c (CommandSaveSettings): save new options.
        * gtkgame.c (OptionPages, OptionsOK): handle new options.
        * play.c (OptimumRoll): modify logic to handle new options 
        (changed all callers)

        * play.c (ComputerTurn): slight modification to resign logic.
	* export.c: pacify fussy compilers.

Sat Mar 29 16:08:43 2003  Oystein Johansen <oystein@gnubg.org>

        * gnubg.c, gtkgame.c, html.c: GammOnLine export directly to clipboard.  
	
Sat Mar 29 13:46:23 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c, gtkrolls.c, gtkgame.c, dice.c: Pacify fussy compilers.

Fri Mar 28 18:27:12 2003  Joern Thyssen  <jth@gnubg.org>

	Read dice from file.

	* gnubg.c: new command "set rng file <filename>".
	* set.c (CommandSetRNGFile): new function.
	* set.c (SetRNG): handle new RNG.
	* gtkgame.c (OptionsPages, OptionsOK): handle new RNG.

Thu Mar 27 21:18:34 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (EvalWidget): add some tooltips.

Thu Mar 27 20:09:12 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (CommandNewGame): only pop game if a game is in progress.
	(reported in rec.games.gammon)

Thu Mar 27 19:39:59 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportTMG): import beavers correctly
	* gnubg.c (CommandImportTMG): set path to tmg files.
	(reported by Ned Cross)

Sun Mar 23 19:28:43 2003  Oystein Johansen <oystein@gnubg.org>

        * gnubg.c: TextToClipboard: Fix bug from 14/03

Fri Mar 21 11:12:58 2003  Gary Wong  <gtw@gnu.org>

	* gnubg.c: Initialise new members in matchstate struct (otherwise
	"make check" fails).

Thu Mar 20 21:09:15 2003  Joern Thyssen  <jth@gnubg.org>

        Improve support for Jacoby and cube use.

        * gnubg.c, sgf.c, import.c, gtkgame.c, gtkboard.c, set.c, show.c,